Add new paragraph

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <!-- Typing Hero -->
 <div class="hero-typing">
   <h1 class="hero-title">Welcome — <span id="type-text" aria-live="polite"></span><span class="cursor">|</span></h1>
+  <h6>hello ji kese ho sare..............</h6>
 </div>
 
 <script>
